# developer-manual

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  LANGS.md  README-gitbook.md  README.md  SUMMARY.md  asking-questions.html  asking-questions.md  best-practices-documenting.md  best-practices-github.md  best-practices-programming.md  best-practices.md  buenas-practicas.md  contributors.html  contributors.md  dev-aliases.yaml  dev-aliases.yml  documenting.html  documenting.md  faq-advanced.md  faq-basic.md  frequently-asked-questions.html  frequently-asked-questions.md  gitbook-cover.md  github.html  github.md  index.html  introduction.html  introduction.md  main-developer-tools.md  mkdocs.yml  programming-with-yarp.md  programming.md  repository-index.md  requirements.txt  version-control.md
.github/workflows/: contributors.yml  gh-pages.yml
appendix/: README.md  additional-links.html  additional-links.md  index.html  project-index.html  project-index.md  repository-index.html  repository-index.md  yarp-tricks.html  yarp-tricks.md
cmake/template/: ROBOTICSLAB_BEST_PRACTICESConfig.cmake.in
docs/: asking-questions.md  contributors.md  documenting.md  frequently-asked-questions.md  github.md  index.md  introduction.md
docs/appendix/: index.md  project-index.md  repository-index.md  yarp-tricks.md
docs/programming/: README.md  index.md  programming-with-yarp.md
en/: README.md  best-practices.md
es/: README.md  SUMMARY.md  best-practices.md
programming/: index.html  programming-with-yarp.html
scripts/: update_contributors.py
scripts/admin/: update-gitbook.sh
search/: search_index.json
